--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "target-dir": "JJs/Bundle/GeonamesBundle",
     "minimum-stability": "dev",
     "require": {
-        "php": "~5.4",
-        "guzzle/http": "~3.5",
+        "php": ">=5.4",
+        "guzzle/http": ">=3.5",
         "jjs/common": "*",
-        "symfony/framework-bundle": "~2.1"
+        "symfony/framework-bundle": ">=2.1"
     },
     "require-dev": {
         "symfony/console": "~2.1",
