--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "symfony/framework-bundle": "~2.1"
     },
     "require-dev": {
-        "symfony/console": "~2.1",
-        "symfony/dom-crawler": "~2.1",
-        "symfony/css-selector": "~2.2",
-        "jms/cg": "~1.0"
+        "symfony/console": ">=2.1",
+        "symfony/dom-crawler": ">=2.1",
+        "symfony/css-selector": ">=2.2",
+        "jms/cg": ">=1.0"
     }
 }
